# RL_Turtle

./: README.md  package.xml  setup.cfg  setup.py
config/: turtle.yaml
launch/: display.launch.py  display_gazebo.launch.py  display_sensors.launch.py  display_sensors_gazebo.launch.py  turtle_controller.launch.py  turtle_record_x.launch.py
meshes/: intel-real-sense.stl  kobuki-base.stl  kobuki-small-wheel-1.dae  kobuki-small-wheel-1.stl  kobuki-wheel-1.dae  kobuki-wheel-1.stl  kobuki-wheel-holder-1.dae  kobuki-wheel-holder-1.stl
urdf/: turtle.urdf  turtle.xacro.urdf  turtle_sensors.urdf  turtle_sensors.xacro.urdf
urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
urdf/log/: latest_build
world/: empty_world.sdf
